<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="160dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/age_EditText"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="240dp"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="136dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkGender"
            android:text="@string/women_text" />

        <RadioButton
            android:id="@+id/radio_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkGender"
            android:text="@string/men_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/age_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:text="@string/age_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/height_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="232dp"
        android:text="@string/height_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height_EditText"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="212dp"
        android:ems="10"
        android:hint="@string/height_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="152dp"
        android:onClick="settingsConfirm"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="468dp"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>