<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tsm_ad.OptionsActivity">

    <TextView
        android:id="@+id/tv_timer1"
        android:layout_width="260dp"
        android:layout_height="114dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="332dp"
        android:layout_marginEnd="144dp"
        android:background="@android:drawable/editbox_background"
        android:drawableTop="@drawable/ic_time"
        android:drawablePadding="14dp"
        android:hint="@string/hours_hint"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="280dp"
        android:text="@string/notification_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hoursText"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_timer1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="452dp"
        android:layout_marginEnd="232dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/notificationSwitch"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="212dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/age_EditText"
        android:layout_width="100dp"
        android:layout_height="41dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="240dp"
        android:ems="10"
        android:hint="@string/age_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="136dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkGender"
            android:text="@string/women_text" />

        <RadioButton
            android:id="@+id/radio_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="checkGender"
            android:text="@string/men_text" />
    </RadioGroup>

    <TextView
        android:id="@+id/age_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="180dp"
        android:text="@string/age_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/height_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="232dp"
        android:text="@string/height_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/height_EditText"
        android:layout_width="129dp"
        android:layout_height="42dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="212dp"
        android:ems="10"
        android:hint="@string/height_hint"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm_settings_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="128dp"
        android:layout_marginTop="484dp"
        android:text="@string/confirm_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goto_main_Button"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:text="@string/main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/goto_chart_Button"
        android:layout_width="194dp"
        android:layout_height="45dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:text="@string/chart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>